Fix excessive padding on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,10 @@ body {
 	}
 
 #results {
-	padding-left: 5em;
-	padding-right: 5em;
+  @media screen and (min-width: 768px) {
+  	padding-left: 5em;
+  	padding-right: 5em;
+  }
 }
 	#results p {
 		line-height: 1.4em;
